# Pack-Manager

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MAPPING.md  ORGANOGRAM.md  README.md  fnox.toml  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  vitest.config.ts
.codex/: config.toml  hooks.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-please.yml  release.yml  test.yml
.kanban/: .gitignore  agents.yaml  audit.ndjson  board.json  profiles.json  session-env-policy.json
.kanban/profiles/: prof-1784779686792.json
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-configure-dependabot.md  spec-fix-uv-outdated-parser.md  spec-harden-command-trust-boundaries.md
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-23.md  implementation-readiness-report-2026-07-24.md  (+1 more)
dev/: capture-fixtures.sh
docs/: DECISIONS.md  IMPL_PLAN.md  SPEC.md  architecture.md  ci-secrets-checklist.md  ci.md  component-inventory.md  contribution-guide.md  deployment-guide.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_update.rs  commands.rs  detect.rs  diagnostics.rs  error.rs  events.rs  ipc.rs  journal.rs  lib.rs  logging.rs  main.rs  ops.rs  paths.rs  queue.rs  registry.rs  settings.rs  state.rs
src-tauri/src/managers/: brew.rs  mas.rs  mise.rs  mod.rs  npm.rs  rustup.rs  uv.rs
src-tauri/src/managers/parse/: brew.rs  mas.rs  mise.rs  mod.rs  npm.rs  rustup.rs  uv.rs
src-tauri/src/process/: fake.rs  mod.rs  runner.rs
src-tauri/tests/: live_smoke.rs
tests/: README.md  tsconfig.json
(+172 files in other folders)
