[package]
name = "pack-manager"
version = "0.2.7"
description = "Pack-Manager"
authors = ["sallvain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pack_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "process", "io-util", "time", "sync", "macros"] }
tokio-util = "0.7.19"
thiserror = "2.0.19"
async-trait = "0.1.91"
tracing = "0.1.44"
tracing-appender = "0.2.5"
# `fs` adds access(2) — used to test whether the app bundle can be replaced
# without an admin prompt before offering the in-app update (app_update.rs).
nix = { version = "0.31.3", features = ["signal", "process", "fs"] }
regex = "1.13.1"
dirs = "6.0.0"
which = "8.0.5"
zip = "8.6.0"
tauri-plugin-opener = "2.5.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "registry"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }
time = { version = "0.3.54", features = ["formatting", "serde-well-known"] }
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.27.0"
# Paused-time tests (`#[tokio::test(start_paused = true)]`) per SPEC §7.
tokio = { version = "1.53.1", features = ["test-util"] }

[features]
# Enables test doubles (e.g. process::fake::FakeRunner) outside `cfg(test)`.
test-util = []
